fix alignment issue of countdown clock

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -382,7 +382,7 @@ th .desc {
 .alert .flip-clock-wrapper {
   font-size: 22px;
   position: relative;
-  margin: 0px 0px 0px 73px;
+  margin: 0px 0px 0px 61px;
 }
 
 .countdownalert {
